--- a/index.htm
+++ b/index.htm
@@ -6,31 +6,31 @@
     <meta name="viewport" id="metaViewport" content="user-scalable=no, initial-scale=1, width=device-width, viewport-fit=cover" data-tdv-general-scale="0.5"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <script src="lib/tdvplayer.js?v=1728339969842"></script>
-    <link rel="shortcut icon" href="favicon.ico?v=1728339969842">
-	<link rel="icon" sizes="48x48 32x32 16x16" href="favicon.ico?v=1728339969842">
-	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="misc/icon180.png?v=1728339969842">
-	<link rel="icon" type="image/png" sizes="16x16" href="misc/icon16.png?v=1728339969842">
-	<link rel="icon" type="image/png" sizes="32x32" href="misc/icon32.png?v=1728339969842">
-	<link rel="icon" type="image/png" sizes="192x192" href="misc/icon192.png?v=1728339969842">
-	<link rel="manifest" href="manifest.json?v=1728339969842">
+    <script src="lib/tdvplayer.js?v=1728342559388"></script>
+    <link rel="shortcut icon" href="favicon.ico?v=1728342559388">
+	<link rel="icon" sizes="48x48 32x32 16x16" href="favicon.ico?v=1728342559388">
+	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="misc/icon180.png?v=1728342559388">
+	<link rel="icon" type="image/png" sizes="16x16" href="misc/icon16.png?v=1728342559388">
+	<link rel="icon" type="image/png" sizes="32x32" href="misc/icon32.png?v=1728342559388">
+	<link rel="icon" type="image/png" sizes="192x192" href="misc/icon192.png?v=1728342559388">
+	<link rel="manifest" href="manifest.json?v=1728342559388">
 	<meta name="msapplication-TileColor" content="#000000">
 	<meta name="msapplication-config" content="browserconfig.xml">
-	<link rel="preload" href="locale/pt.txt?v=1728339969842" as="fetch" crossorigin="anonymous"/>
-	<link rel="preload" href="script.js?v=1728339969842" as="script"/>
-	<link rel="preload" href="media/panorama_5D384728_52A4_7C0C_41B8_F0592466DA22_0/r/2/0_0.jpg?v=1728339969842" as="image"/>
-	<link rel="preload" href="media/panorama_5D384728_52A4_7C0C_41B8_F0592466DA22_0/l/2/0_0.jpg?v=1728339969842" as="image"/>
-	<link rel="preload" href="media/panorama_5D384728_52A4_7C0C_41B8_F0592466DA22_0/u/2/0_0.jpg?v=1728339969842" as="image"/>
-	<link rel="preload" href="media/panorama_5D384728_52A4_7C0C_41B8_F0592466DA22_0/d/2/0_0.jpg?v=1728339969842" as="image"/>
-	<link rel="preload" href="media/panorama_5D384728_52A4_7C0C_41B8_F0592466DA22_0/f/2/0_0.jpg?v=1728339969842" as="image"/>
-	<link rel="preload" href="media/panorama_5D384728_52A4_7C0C_41B8_F0592466DA22_0/b/2/0_0.jpg?v=1728339969842" as="image"/>
+	<link rel="preload" href="locale/pt.txt?v=1728342559388" as="fetch" crossorigin="anonymous"/>
+	<link rel="preload" href="script.js?v=1728342559388" as="script"/>
+	<link rel="preload" href="media/panorama_5D384728_52A4_7C0C_41B8_F0592466DA22_0/r/2/0_0.jpg?v=1728342559388" as="image"/>
+	<link rel="preload" href="media/panorama_5D384728_52A4_7C0C_41B8_F0592466DA22_0/l/2/0_0.jpg?v=1728342559388" as="image"/>
+	<link rel="preload" href="media/panorama_5D384728_52A4_7C0C_41B8_F0592466DA22_0/u/2/0_0.jpg?v=1728342559388" as="image"/>
+	<link rel="preload" href="media/panorama_5D384728_52A4_7C0C_41B8_F0592466DA22_0/d/2/0_0.jpg?v=1728342559388" as="image"/>
+	<link rel="preload" href="media/panorama_5D384728_52A4_7C0C_41B8_F0592466DA22_0/f/2/0_0.jpg?v=1728342559388" as="image"/>
+	<link rel="preload" href="media/panorama_5D384728_52A4_7C0C_41B8_F0592466DA22_0/b/2/0_0.jpg?v=1728342559388" as="image"/>
 	<script src="scorm.js" type="text/javascript"></script>
 	<meta name="description" content="Virtual Tour"/>
 	<meta name="theme-color" content="#000000"/>
-    <script src="script.js?v=1728339969842"></script>
+    <script src="script.js?v=1728342559388"></script>
     <script type="text/javascript">
         var tour;
-        var devicesUrl = {"general":"script_general.js?v=1728339969842","mobile":"script_mobile.js?v=1728339969842"};
+        var devicesUrl = {"general":"script_general.js?v=1728342559388","mobile":"script_mobile.js?v=1728342559388"};
 
         (function()
         {
@@ -73,9 +73,9 @@
 
             var settings = new TDV.PlayerSettings();
             settings.set(TDV.PlayerSettings.CONTAINER, document.getElementById('viewer'));
-            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1728339969842');
-            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1728339969842');
-            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1728339969842');
+            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1728342559388');
+            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1728342559388');
+            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1728342559388');
 
             tour = new TDV.Tour(settings, devicesUrl);
             tour.bind(TDV.Tour.EVENT_TOUR_INITIALIZED, onVirtualTourInit);
@@ -116,7 +116,7 @@
 
         function onVirtualTourLoaded()
         {
-            disposePreloader();
+            console.log("onloaded", tour.isPaused); if(!tour.isPaused) disposePreloader();
         }
 
         function onVirtualTourEnded()
@@ -247,6 +247,8 @@
 
             showPreloader();
 			loadTour();
+			pauseTour();
+			setTimeout(function(){ console.log("timeout", tour.isInitialized); if(tour.isInitialized) { disposePreloader(); } resumeTour(); }, 5000);
         }
 
         
@@ -344,7 +346,7 @@
     
 </head>
 <body>
-    <div id="preloadContainer" class="fill-viewport"><div style="z-index: 4; position: absolute; background-size: contain; background-image: url('loading/HTMLImage_65FE225A_6911_9007_41CA_AAA9804D7FA4.jpeg'); background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 0%; top: 0.17152658662092624%; width: 100.00%; height: 99.83%" ></div></div>
+    <div id="preloadContainer" class="fill-viewport"><div style="z-index: 4; position: absolute; background-size: contain; background-image: url('loading/HTMLImage_73C4F7A1_6925_F7D7_41C2_6ABF0EFE6F64.png'); background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 0%; bottom: 0%; width: 100.00%; height: 99.83%" ></div></div>
     <div id="viewer" class="fill-viewport"></div>
 </body>
 </html>
